--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learning Management App</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet"    href="style.css">
+    <link rel="stylesheet"    href="style.css">
 </head>
 <body>
     <h1>Learning Management App</h1>
@@ -25,6 +26,7 @@
     <form id="logout-form">
         <button type="submit">Logout</button>
     </form>
+    <script src="script.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
