--- a/leader-board.html
+++ b/leader-board.html
@@ -13,6 +13,12 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/course-content">Course Content</a></li>
+                <li><a href="/leaderboard">Leaderboard</a></li>
+                <li><a href="/assignments">Assignments</a></li>
+                <li><a href="/grades">Grades</a></li>
+                <li><a href="/calender">Calender</a></li>
+                <li><a href="/discussions">Discussions</a></li>
+                <li><a href="/resources">Resources</a></li>
                 <!-- Add more navigation links as needed -->
             </ul>
         </nav>
